--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 *{
     margin: 0;
     padding: 0;
+    list-style: none;
+    font-size: 1rem;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
 }
 @font-face {
     font-family: "Fermow";
@@ -8,39 +12,34 @@
     font-weight: normal;
     font-style: normal;
 }
-h1#tlogo{
+
+.header{
+    background: rgba(51, 51, 51, 0.349);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+}
+
+a#tlogo{/*Configuração da logo*/
     font-family: 'Fermow', Times, serif;
     font-size: 5em;
     font-weight: normal;
 }
-ul.menu{
-    list-style: none;
-    float: left;
-    background: orange;
-    
+
+.menu{
+    display: flex;
 }
 .menu li{
-    position: relative;
-    float: left;
-    top: 30px;
-    padding: 0 15px 0 0;
-    background: red;
+    margin-left: 10px;
 }
 .menu li a{
-    color: #333;
-    text-decoration: none;
-    font-size: 0.88em;
-    padding: 5px;
     display: block;
-    background: blue;
-}
-.menu li a:hover{
-    color: red;
+    padding: 5px;
 }
 .menu li ul{
     position: absolute;
-    top: 25px;
-    left: 0;
     background-color: rgba(51, 51, 51, 0);
     display: none;
     background: green;
@@ -51,4 +50,10 @@ ul.menu{
 .menu li ul li{
     display: block;
     width: 150px;
+}
+
+div.slideimg{
+    max-width: 100%;
+    display: block;
+    background: red;
 }
