--- a/css/style.css
+++ b/css/style.css
@@ -128,11 +128,11 @@ img{
             display: flex;
             flex-wrap: wrap;
             /* background: rgba(128, 0, 0, 0.575); */
-            margin-left: 160px;
+            margin-left: 130px;
         }
 /*--------------------------------------------------------*/
                 .header-grid nav ul.menu2 li + li{
-                    margin-left: 20px;
+                    margin-left: 45px;
                 }
 .header-grid nav ul.menu2 li{
     /* background: rgba(255, 255, 0, 0.404); */
@@ -156,11 +156,17 @@ img{
                             .header-grid nav ul.menu2 li:hover ul{
                                 display: block;
                             }
+                            .header-grid nav ul.menu2 li ul a{
+                                display: none;
+                            }
             .header-grid nav ul.menu2 li ul li{
                 display: block;
                 width: 230px;
             }
             .header-grid nav ul.menu2 li ul li input{
+
+                display: none;
+
                 margin-top: 15px;
                 width: 230px;
                 text-transform: capitalize;
@@ -169,7 +175,7 @@ img{
                 border: none;
                 border-bottom: 1px solid white;
                 background: rgba(0  , 0, 0, 0);
-                color: rgba(0, 0, 0, 0.7);
+                color: white;
                 padding: 0px 0px 15px 0px;
             }
 
