--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,7 @@ img{
     grid-auto-columns: 1fr;
     grid-template-rows: auto auto auto auto;
 }
-            section.section-main section.section2, section.section-main section.section3, section.section-main section.section4{
+            section.section-main section.section2, section.section-main section.section4{
                 background: lightblue;
                 margin-top: 5px;
                 margin-bottom: 5px;
@@ -203,14 +203,29 @@ img{
                 grid-template-rows: 1fr;
             }
                         .area-text{
-                            background: red;
-                            height: 500px;
+                            background: white;
                         }
-                        .area-slide{
-                            background: green;
+                        .area-slide2{
+                            background: white;
+                            position: relative;
+                            display: grid;
+                            margin: 1fr 1fr;
+                        }
+                        div.text-section2{
+                            display: inline-block;
+                            width: 50px;
+                            padding: 10px;
+                            margin: 10px;
+                        }
+                        div.text-section2 a{
+                            background: blue;
+                            height: 20px;
+                            text-align: center;
                         }
             section.section3{
                 position: relative;
+                margin-top: 5px;
+                margin-bottom: 5px;
             }
                         section.section3 div.menuzinho1{
                             background: white;
@@ -475,3 +490,56 @@ section.section-main section.section1 div.slide1{
                                     transform: initial;
                                 }
                             }
+
+/* CONFIGURAÇÃO DO PRIMEIRO SLIDE 2 */
+.slide2-itens{
+    grid-area: 1/1;
+}
+.slide2-nav{
+    grid-area: 1/1;
+    z-index: 1;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto 1fr;
+}
+.slide2-nav button{
+    opacity: 0;
+}
+.slide2-itens > *{
+    position: absolute;
+    top: 0;
+    opacity: 0;
+    pointer-events: none;
+}
+.slide2-itens > .active2{
+    position: relative;
+    opacity: 1;
+    pointer-events: initial;
+}
+.slide2-thumb{
+    display: flex;
+    grid-column: 1/3;
+}
+.slide2-thumb > span{
+    flex: 1;
+    display: block;
+    height: 10px;
+    background: rgba(153, 144, 142, 0);
+    margin: 5px;
+    border-radius: 3px;
+    overflow: hidden;
+}
+.slide2-thumb > span.active2::after{
+    content: '';
+    display: block;
+    height: inherit;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 3px;
+    transform: translateX(-100%);
+    animation: thumb2 5s forwards linear;
+}
+@keyframes thumb2{
+    to{
+        transform: initial;
+    }
+}
