--- a/css/style.css
+++ b/css/style.css
@@ -47,19 +47,7 @@ img{
 --------------------------------------------------------------------------------------*/
 
 
-        .centralizador-menu-header{
-            display: flex;
-            padding: 5px;
-            align-items: center;
-        }
-        .header-grid a.tlogo{               /*CONFIGURAÇÃO DA LOGO*/
-            font-family: 'Fermow', Times, serif;
-            font-size: 12em;
-            font-weight: normal;
-            color: black;
-            text-transform: capitalize;
-            /* background: rgba(255, 0, 0, 0.452); */
-        }
+        
 /* ////////////////////////////////////////////////////////////////  MENU1  /////////////////////*/
         .header-grid nav ul.menu1{
             display: flex;
@@ -78,7 +66,7 @@ img{
                 .header-grid nav ul.menu1 li a{
                     display: block;
                     padding: 5px;
-                    color: black;
+                    color: white;
                     font-size: 0.9em;
                     font-family: "FermowGeral", Times, serif;
                     border-bottom: 2px solid rgba(0, 0, 0, 0);
@@ -108,7 +96,7 @@ img{
                     font-family: "FermowGeralPrincipal", Times, serif;
                     text-transform: capitalize;
                     font-size: 1em;
-                    color: black;
+                    color: white;
                     border-bottom: none;
                     transition: none;
                 }
@@ -136,7 +124,7 @@ img{
             .header-grid nav ul.menu2 li a{
                 display: block;
                 padding: 5px;
-                color: black;
+                color: white;
                 font-size: 1em;
                 /* background: rgba(255, 255, 0, 0.486); */
             }
@@ -168,9 +156,9 @@ img{
                 font-family: 'FermowGeralPrincipal', Times, serif;
                 font-size: 1em;
                 border: none;
-                border-bottom: 1px solid black;
+                border-bottom: 1px solid white;
                 background: rgba(0  , 0, 0, 0);
-                color: black;
+                color: white;
                 padding: 0px 0px 15px 0px;
             }
 
@@ -183,19 +171,182 @@ img{
     grid-auto-columns: 1fr;
     grid-template-rows: auto auto auto auto;
 }
-            section.section-main section.section2{
-                background: lightblue;
-                margin-top: 65px;
-                margin-bottom: 65px;
+    section.section-main section.section1{
+        margin-bottom: 5px;
+        background: #2daebf;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }
+        .header-grid{
+            padding: 0;
+            background: rgba(179, 19, 19, 0);
+            box-shadow: inset 0em 3em 30em rgba(0, 0, 0, 0.700);
+            /* display: grid; */
+            /* align-self: start; */
+            /* grid-template-columns: 1fr auto auto; */
+            /* grid-template-rows: 1fr; */
+            align-items: flex-start;
+            font-family: 'FermowGeral', Times, serif;  
+            z-index: 6;
+            grid-column: 1;
+            grid-row: 1;
+        }
+            .centralizador-menu-header{
+                display: flex;
+                padding: 23px 50px;
+                align-items: center;
             }
-                            section.section-main section.section1{
-                                margin-bottom: 5px;
-                            }
-            section.section2{
+                .centralizador-menu-header:hover{
+                    background: white;
+                    
+                }
+                .centralizador-menu-header a{
+                    transition: 0.5s;
+                }
+                .centralizador-menu-header:hover a{
+                    color: black !important;
+                    transition: 0.5s;
+                }
+            .header-grid a.tlogo{               /*CONFIGURAÇÃO DA LOGO*/
+                font-family: 'Fermow', Times, serif;
+                font-size: 12em;
+                font-weight: normal;
+                color: white;
+                text-transform: capitalize;
+                /* background: rgba(255, 0, 0, 0.452); */
+            }
+
+        section.section-main section.section1 div.slide1{
+            max-width: 100%;
+            margin: auto;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-rows: 1fr auto 0.2fr 0.1fr;
+            grid-column: 1;
+            grid-row: 1;
+        }
+            .slide-itens{
+                grid-row: 1 / -1;
+                grid-column: 1 / -1;
+
+                position: relative;
                 display: grid;
-                grid-template-columns: 350px 1fr;
-                grid-template-rows: 1fr;
             }
+                .slide-itens > *{
+                    opacity: 0;
+                    position: absolute;
+                    top: 0px;
+                    pointer-events: none;
+                }
+                .slide-itens > .active{
+                    opacity: 1;
+                    pointer-events: initial;
+                    position: relative;
+                }
+            .slide-nav{
+                grid-column: 2;
+                grid-row: 3;
+
+                z-index: 7;
+                background: white;
+                border-radius: 3px;
+                padding: 0;
+
+                display: grid;
+                grid-template-columns: auto auto auto auto;
+                grid-template-rows: 15px 15px 15px auto;
+                /* justify-content: stretch; */
+            }
+                .slide-thumb{
+                    /* display: flex; */
+                    /* grid-column: 1 / 4; */
+                    /* grid-row: 1/4; */
+                    grid-row: 1;
+                    grid-column: 1 / -1;
+                    /* background: red; */
+                    display: grid;
+                    grid-template-columns: 1fr;
+                    grid-template-rows: 1fr;
+                    height: 0;
+                    position: relative;
+                }
+                        .slide-thumb > span{
+                            /* flex: 1; */
+                            display: block;
+                            grid-column: 1;
+                            grid-row: 1;
+                            height: 3px;
+                            background: rgba(0, 0, 0, 0);
+                            /* margin: 5px; */
+                            overflow: hidden;
+                        }
+                        .slide-thumb > span.active::after{
+                            content: '';
+                            display: block;
+                            grid-column: 1;
+                            grid-row: 1;
+                            height: inherit;
+                            background: black;
+                            transform: translateX(-100%);
+                            animation: thumb 5s forwards linear;
+                        }
+                        @keyframes thumb{
+                            to{
+                                transform: initial;
+                            }
+                        }
+                    .slide-nav button.slide-prev{
+                        -webkit-appearance: none;
+                        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+                        /* align-self: stretch; */
+                        background: rgba(0, 0, 0, 0);
+                        border: rgba(0, 0, 0, 0);
+                        grid-column: 2;
+                        grid-row: 2;
+                        height: 10px;
+                        position: absolute;
+                        bottom: 10%;
+                        left: 45%;
+                    }
+                    .slide-nav button.slide-next{
+                        -webkit-appearance: none;
+                        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+                        /* align-self: stretch; */
+                        background: rgba(0, 0, 0, 0);
+                        border: rgba(137, 43, 226, 0);
+                        grid-column: 3;
+                        grid-row: 2;
+                        height: 10px;
+                        position: absolute;
+                        bottom: 10%;
+                        right: 45%;
+                    }
+                    .subTituloNav-section1{
+                        grid-column: 1 / -1;
+                        grid-row: 3;
+                        align-self: center;
+                        text-align: center;
+                        color: black;
+                    }
+                    .TituloNav-section1{
+                        align-self: center;
+                        text-align: center;
+                        color: black;
+                        grid-column: 1 / -1;
+                        grid-row: 4;
+                        font-size: 1.2em;
+                    }
+                
+
+    section.section-main section.section2{
+        background: lightblue;
+        margin-top: 65px;
+        margin-bottom: 65px;
+        display: grid;
+        grid-template-columns: 350px 1fr;
+        grid-template-rows: 1fr;
+    }
                         .area-text{
                             background: white;
                             display: grid;
@@ -209,12 +360,12 @@ img{
                                     grid-template-rows: 1fr 1fr 1fr 1fr;
                                     align-items: center;
                                 }
-                                    .area-text h1{
+                                    .area-text a.TituloNav-section2{
                                         font-size: 1.2em;
                                         /* background: lightblue; */
                                         grid-row: 3;
                                     }
-                                    .area-text a{
+                                    .area-text a.subTituloNav-section2{
                                         font-size: 1.2em;
                                         /* background: lightblue; */
                                         grid-row: 2;
@@ -237,15 +388,15 @@ img{
                             color: black;
                             height: 20px;
                         }
-                section.section3{
-                    display: grid;
-                    grid-template-columns: 1fr 1fr 1fr;
-                    grid-template-rows: minmax(750px, 1fr);
-                    background: url(/IMG/ROUPAS/slide2.png) no-repeat top;
-                    box-shadow: inset 0em 3em 30em rgba(0, 0, 0, 0.700);
-                    background-size: cover;
-                    /* padding: 10px; */
-                }
+    section.section3{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: minmax(750px, 1fr);
+        background: url(/IMG/ROUPAS/slide2.png) no-repeat top;
+        box-shadow: inset 0em 3em 30em rgba(0, 0, 0, 0.700);
+        background-size: cover;
+        /* padding: 10px; */
+    }
                 .conteudoS3{
                     /* background: white; */
                     grid-column: 2;
@@ -257,28 +408,28 @@ img{
                     width: 100%;
                     height: 100px;
                     display: grid;
-                    grid-template-rows: 1fr 1fr 1fr 1fr;
+                    grid-template-rows: 3fr 1fr 1fr 1fr;
                     align-items: center;
                     text-align: center;
                     border-radius: 3px;
                     margin-bottom: 10%;
                 }
-                .menuzinho a{
-                    color: black;
+                .menuzinho a.subTituloNav-section3{
+                    color: rgb(116, 41, 41);
                     grid-row: 2;
                 }
-                .menuzinho h1{
+                .menuzinho a.TituloNav-section3{
                     color: black;
                     grid-row: 3;
                 }
-        .section4{
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            grid-template-rows: minmax(300px, 1fr) 1fr 1fr;
-            background: url(/IMG/ROUPAS/slide1.png) no-repeat top;
-            box-shadow: inset 0em 5em 30em rgba(0, 0, 0, 0.700);
-            background-size: cover;
-        }
+    .section4{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: minmax(300px, 1fr) 1fr 1fr;
+        background: url(/IMG/ROUPAS/slide1.png) no-repeat top;
+        box-shadow: inset 0em 5em 30em rgba(0, 0, 0, 0.700);
+        background-size: cover;
+    }
                 .section4 #slide4{
                     /* background: lightblue; */
                     grid-column: 2;
@@ -485,93 +636,25 @@ img{
 
 
 
-
-
-
-                                /* CONFIGURAÇÃO DO PRIMEIRO SLIDE */
-section.section-main section.section1 div.slide1{
-    max-width: 100%;
-    margin: auto;
+.menuzinho-section1{
+    background: red;
+    width: 100%;
+    height: 100px;
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    align-items: center;
+    text-align: center;
+    border-radius: 3px;
+    margin-bottom: 10%;
 }
-                                    /* ESCONDENDO OS ITENS */
-            .slide-itens{
-                position: relative;
-                grid-area: 1;
-                grid-row: 3/3;
-                grid-column: 1;
-                display: grid;
-            }
-                    .slide-itens > *{
-                        opacity: 0;
-                        position: absolute;
-                        top: 0px;
-                        pointer-events: none;
-                    }
-                    .slide-itens > .active{
-                        opacity: 1;
-                        pointer-events: initial;
-                        position: relative;
-                    }
-            .slide-nav{
-                grid-area: 3/3;
-                z-index: 7;
-                grid-column: 1;
-                display: grid;
-                grid-template-columns: 1fr 1fr;
-                grid-template-rows: auto 1fr;
-                justify-content: stretch;
-            }
-            .header-grid{
-                /* background: rgba(48, 4, 168, 0.596); */
-                padding: 10px 30px 30px 30px;
-                background: rgba(190, 23, 23, 0.603);
-                display: grid;
-                align-self: start;
-                grid-template-columns: 1fr auto auto;
-                grid-template-rows: 1fr;
-                align-items: flex-start;
-                font-family: 'FermowGeral', Times, serif;
-                grid-column: 1/4;
-                grid-row: 1/4;    
-                z-index: 6;
-            }
-            .slide-nav button{
-                -webkit-appearance: none;
-                -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-                align-self: stretch;
-                opacity: 1;
-            }
-                    .slide-thumb{
-                        display: flex;
-                        grid-column: 1 / 4;
-                        grid-row: 1/4;
-                    }
-                            .slide-thumb > span{
-                                flex: 1;
-                                display: block;
-                                height: 10px;
-                                background: rgba(170, 170, 170, 0.1);
-                                margin: 5px;
-                                border-radius: 3px;
-                                overflow: hidden;
-                            }
-                            .slide-thumb > span.active::after{
-                                content: '';
-                                display: block;
-                                height: inherit;
-                                background: rgba(255, 255, 255, 0.2);
-                                border-radius: 3px;
-                                transform: translateX(-100%);
-                                animation: thumb 5s forwards linear;
-                            }
-                            @keyframes thumb{
-                                to{
-                                    transform: initial;
-                                }
-                            }
+.menuzinho-section1 a{
+    color: black;
+    grid-row: 2;
+}
+.menuzinho-section1 h1{
+    color: black;
+    grid-row: 3;
+}
 
 /* CONFIGURAÇÃO DO PRIMEIRO SLIDE 2 */
 .slide2-itens{
