--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
     font-family: 'FermowGeral', Times, serif;
     text-decoration: none;
     text-transform: uppercase;
-    outline: #2daebf dashed 1px;
+    /* outline: #2daebf dashed 1px; */
 }
 img{
     max-width: 100%;
@@ -80,7 +80,7 @@ img{
                 /*/////////CONFIGURAÇÃO DO SUBITEM DO MENU\\\\\\\\*/
                 .header-grid nav ul.menu1 li ul{
                     position: absolute;
-                    background-color: rgba(51, 51, 51, 0);
+                    background-color: white;
                     display: none;
                     /* background: rgba(128, 0, 85, 0.404); */
                 }
@@ -193,9 +193,14 @@ img{
                 display: flex;
                 padding: 23px 50px;
                 align-items: center;
+                transition: 0.5s;
             }
                 .centralizador-menu-header:hover{
                     background: white;
+                    align-items: flex-start;
+                    transition: 1s;
+                    height: 50%;
+                    z-index: 7;
                     
                 }
                 .centralizador-menu-header a{
@@ -245,7 +250,7 @@ img{
                 grid-column: 2;
                 grid-row: 3;
 
-                z-index: 7;
+                z-index: 5;
                 background: white;
                 border-radius: 3px;
                 padding: 0;
