--- a/css/style.css
+++ b/css/style.css
@@ -80,12 +80,13 @@ img{
                 /*/////////CONFIGURAÇÃO DO SUBITEM DO MENU\\\\\\\\*/
                 .header-grid nav ul.menu1 li ul{
                     position: absolute;
-                    background-color: white;
+                    background-color: rgba(255, 255, 255, 0);
                     display: none;
                     /* background: rgba(128, 0, 85, 0.404); */
                 }
-                            .header-grid nav ul.menu1 li:hover ul{
+                            .header-grid .centralizador-menu-header nav ul.menu1 li:hover ul{
                                 display: block;
+                                transition: 2s;
                             }
                 .header-grid nav ul.menu1 li ul li{
                     display: block;
@@ -96,7 +97,7 @@ img{
                     font-family: "FermowGeralPrincipal", Times, serif;
                     text-transform: capitalize;
                     font-size: 1em;
-                    color: white;
+                    color: rgba(255, 255, 255, 0);
                     border-bottom: none;
                     transition: none;
                 }
@@ -143,6 +144,7 @@ img{
                                 display: none;
                             }
             .header-grid nav ul.menu2 li ul li{
+                position: relative;
                 display: block;
                 width: 230px;
             }
@@ -156,9 +158,9 @@ img{
                 font-family: 'FermowGeralPrincipal', Times, serif;
                 font-size: 1em;
                 border: none;
-                border-bottom: 1px solid white;
+                border-bottom: 1px solid rgb(0, 0, 0);
                 background: rgba(0  , 0, 0, 0);
-                color: white;
+                color: black;
                 padding: 0px 0px 15px 0px;
             }
 
@@ -417,7 +419,7 @@ img{
                     margin-bottom: 10%;
                 }
                 .menuzinho a.subTituloNav-section3{
-                    color: rgb(116, 41, 41);
+                    color: black;
                     grid-row: 2;
                 }
                 .menuzinho a.TituloNav-section3{
